force-app/main/default/objects/Event_Confirmation__c/Event_Confirmation__c.object-meta.xml
<CustomObject>
    <label>Event Confirmation</label>
    <nameField>
        <label>Event Confirmation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Confirmations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>