force-app/main/default/objects/Event_Confirmation__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <label>Confirmation Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>