force-app/main/default/objects/Event_Confirmation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Confirmations</relationshipLabel>
    <relationshipName>Event_Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>