force-app/main/default/objects/Event_Confirmation__c/fields/Custom_Event__c.field-meta.xml
<CustomField>
    <fullName>Custom_Event__c</fullName>
    <label>Custom Event</label>
    <referenceTo>Custom_Event__c</referenceTo>
    <relationshipLabel>Event Confirmations</relationshipLabel>
    <relationshipName>Event_Confirmations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>