force-app/main/default/objects/Event_Confirmation__c/fields/Email_Sended__c.field-meta.xml
<CustomField>
    <fullName>Email_Sended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sended</label>
    <type>Checkbox</type>
</CustomField>