force-app/main/default/objects/Event_Confirmation__c/fields/EvAddress__c.field-meta.xml
<CustomField>
    <fullName>EvAddress__c</fullName>
    <formula>Custom_Event__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvAddress</label>
    <type>Text</type>
</CustomField>