force-app/main/default/objects/Event_Confirmation__c/fields/EvDateEnd__c.field-meta.xml
<CustomField>
    <fullName>EvDateEnd__c</fullName>
    <formula>MID(TEXT(Custom_Event__r.Date__c  + (Custom_Event__r.Duration_Add__c/1440)), 0, 4) &amp;
MID(TEXT(Custom_Event__r.Date__c  + (Custom_Event__r.Duration_Add__c/1440)), 6, 2) &amp;
MID(TEXT(Custom_Event__r.Date__c  + (Custom_Event__r.Duration_Add__c/1440) ), 9, 2) &amp; &quot;T&quot; &amp;
LPAD(TEXT(HOUR(TIMEVALUE(Custom_Event__r.Date__c + (Custom_Event__r.Duration_Add__c/1440)))),2,&quot;0&quot;) &amp;
LPAD(TEXT(MINUTE(TIMEVALUE(Custom_Event__r.Date__c + (Custom_Event__r.Duration_Add__c/1440)))),2,&quot;0&quot;) &amp;
LPAD(TEXT(SECOND(TIMEVALUE(Custom_Event__r.Date__c + (Custom_Event__r.Duration_Add__c/1440)))),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvDateEnd</label>
    <type>Text</type>
</CustomField>