force-app/main/default/objects/Event_Confirmation__c/fields/EvDateEndDisplay__c.field-meta.xml
<CustomField>
    <fullName>EvDateEndDisplay__c</fullName>
    <formula>LPAD(TEXT(MONTH(DATEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;) &amp; &quot;/&quot; &amp;
LPAD(TEXT(DAY(DATEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;) &amp; &quot;/&quot; &amp;
TEXT(YEAR(DATEVALUE(Custom_Event__r.Date__c))) &amp; &quot; &quot; &amp; 
LPAD(TEXT(HOUR(TIMEVALUE(Custom_Event__r.Date__c + (Custom_Event__r.Duration_Add__c/1440) - ( Custom_Event__r.Hours_to_Add__c)))),2,&quot;0&quot;) &amp; &quot;:&quot; &amp; 
LPAD(TEXT(MINUTE(TIMEVALUE(Custom_Event__r.Date__c + (Custom_Event__r.Duration_Add__c/1440)))),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvDateEndDisplay</label>
    <type>Text</type>
</CustomField>