force-app/main/default/objects/Event_Confirmation__c/fields/EvDateStart__c.field-meta.xml
<CustomField>
    <fullName>EvDateStart__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(Custom_Event__r.Date__c))) &amp; LPAD(TEXT(MONTH(DATEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;)  
&amp; LPAD(TEXT(DAY(DATEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;) &amp; &quot;T&quot; &amp;  LPAD(TEXT(HOUR(TIMEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;)  
&amp; LPAD(TEXT(MINUTE(TIMEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;) &amp; LPAD(TEXT(SECOND(TIMEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvDateStart</label>
    <type>Text</type>
</CustomField>