force-app/main/default/objects/Event_Confirmation__c/fields/EvDateStartDisplay__c.field-meta.xml
<CustomField>
    <fullName>EvDateStartDisplay__c</fullName>
    <formula>LPAD(TEXT(MONTH(DATEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;) &amp; &quot;/&quot; &amp;
LPAD(TEXT(DAY(DATEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;) &amp; &quot;/&quot; &amp;
TEXT(YEAR(DATEVALUE(Custom_Event__r.Date__c))) &amp; &quot; &quot; &amp; 
IF(HOUR(TIMEVALUE(Custom_Event__r.Date__c - ((Custom_Event__r.Hours_to_Add__c )/24)))  &gt;  12, LPAD(TEXT(HOUR(TIMEVALUE(Custom_Event__r.Date__c - ((Custom_Event__r.Hours_to_Add__c + 12 )/24)))),2,&quot;0&quot;), LPAD(TEXT(HOUR(TIMEVALUE(Custom_Event__r.Date__c - ((Custom_Event__r.Hours_to_Add__c )/24)))),2,&quot;0&quot;)) &amp; &quot;:&quot; &amp; 
LPAD(TEXT(MINUTE(TIMEVALUE(Custom_Event__r.Date__c))),2,&quot;0&quot;)&amp; &quot; &quot; &amp;
IF(HOUR(TIMEVALUE(Custom_Event__r.Date__c - ((Custom_Event__r.Hours_to_Add__c )/24))) &gt;= 12, &apos;PM&apos;, &apos;AM&apos;)
&amp; &quot; &quot; &amp;
TEXT(Custom_Event__r.Timezone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvDateStartDisplay</label>
    <type>Text</type>
</CustomField>