force-app/main/default/objects/Event_Confirmation__c/fields/EvEmail__c.field-meta.xml
<CustomField>
    <fullName>EvEmail__c</fullName>
    <formula>Custom_Event__r.Host__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvEmail</label>
    <type>Text</type>
</CustomField>