force-app/main/default/objects/Event_Confirmation__c/fields/EvHostName__c.field-meta.xml
<CustomField>
    <fullName>EvHostName__c</fullName>
    <formula>Custom_Event__r.Host__r.FirstName &amp; &quot; &quot; &amp; Custom_Event__r.Host__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvHostName</label>
    <type>Text</type>
</CustomField>