force-app/main/default/objects/Event_Confirmation__c/fields/EvName__c.field-meta.xml
<CustomField>
    <fullName>EvName__c</fullName>
    <formula>Custom_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvName</label>
    <type>Text</type>
</CustomField>