force-app/main/default/objects/Event_Confirmation__c/fields/Will_Assist__c.field-meta.xml
<CustomField>
    <fullName>Will_Assist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Assist</label>
    <type>Checkbox</type>
</CustomField>